Fix uninitialized pointer.

BUG: 246087

d_ptr->blah and d->blah are not the same in this case, because the Q_D
macro was not used.  At least, I assume that's why it doesn't work.
This fixes a crash in akregator (among other things).